plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
}

group = 'com.yogit'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Swagger
	implementation 'io.springfox:springfox-boot-starter:3.0.0'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// JWT
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

	// apple login
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 테스트 용
	implementation 'org.apache.httpcomponents:httpclient'
	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
	implementation "io.jsonwebtoken:jjwt:0.9.1"
	implementation "org.bouncycastle:bcpkix-jdk15on:1.50"
	implementation "org.apache.httpcomponents:httpclient:4.5.13"
	implementation fileTree(dir: 'libs', include: '*.jar')
}

tasks.named('test') {
	useJUnitPlatform()
}

// apple login
tasks.withType(JavaCompile){
	options.compilerArgs.addAll([
			"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
			"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
			"--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
	])
}
